--- a/SmartExport.css
+++ b/SmartExport.css
@@ -73,3 +73,110 @@
 	line-height: 55.5px;
 	font-size: 2.2rem;
 }
+
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+    position: relative;
+    background-color: #fefefe;
+    margin: auto;
+    padding: 0;
+    border: 1px solid #888;
+    width: 100%;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+    -webkit-animation-name: animatetop;
+    -webkit-animation-duration: 0.4s;
+    animation-name: animatetop;
+    animation-duration: 0.4s
+}
+
+/* Add Animation */
+@-webkit-keyframes animatetop {
+    from {top:-300px; opacity:0} 
+    to {top:0; opacity:1}
+}
+
+@keyframes animatetop {
+    from {top:-300px; opacity:0}
+    to {top:0; opacity:1}
+}
+
+/* The Close Button */
+.close {
+    color: white;
+    float: right;
+    font-size: 15px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.modal-header {
+    padding: 2px 16px;
+    background-color: #5cb85c;
+    color: white;
+    font-size: 15px;
+}
+
+.modal-body {padding: 2px 16px;}
+
+.modal-footer {
+    padding: 2px 16px;
+    background-color: #5cb85c;
+    color: white;
+}
+.XLSbtn{
+    color: #FFF;
+    width:60px;
+    background-color: #1f7044;
+    cursor: pointer;
+    opacity:1;
+    float: left;
+    z-index:3;
+    position:relative;
+    top:5%;
+    left:50%;
+}
+.Wordbtn{
+    color: #FFF;
+    width:60px;
+    background-color: #2a5699;
+    cursor: pointer;
+    opacity:1;
+    float: left;
+    z-index:3;
+    position:relative;
+    top:5%;
+    left:50%;
+}
+.PDFbtn{
+    color: #FFF;
+    width:60px;
+    background-color: #dd4e42;
+    cursor: pointer;
+    opacity:1;
+    float: left;
+    z-index:3;
+    position:relative;
+    top:5%;
+    left:50%;
+}
